Сделала разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,137 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+	<header class="main-header">
+		
+		<nav class="main-navigation">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+			<ul class="site-navigation">
+			<li><a href="hotels.html">Гостиницы</a></li>
+			<li><a href="maps.html">Карта штата</a></li>
+			<li><a href="foto-video.html">Фото и видео</a></li>
+			<li><a href="info.html">Информация</a></li>
+		</ul>
 
-  </body>
+		<a class="main-header-logo">
+		<img src="img/logo.svg" alt="Логотип Седоны">
+		</a>
+
+		</nav>
+
+	</header>
+
+	<main>
+
+		<div class="intro">
+			
+			<p>welcome<br>
+			- to the gorgeous-</p>
+
+			<h1>sedona</h1>
+
+			<q>Because the Grand Canyon sucks</q>
+
+			<p>
+			Седона-
+			небольшой городок в Аризоне,<br>
+			Заслуживающий большего!
+			</p>
+		</div>
+
+		<section class="offers">
+
+			<h2 class="visually-hidden">Предложения</h2>
+
+			<ul class="offers-list">
+
+				<li class="offers-item">
+			<h3>Жилье</h3>
+			<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+			</li>
+
+			<li class="offers-item">
+			<h3>Еда</h3>
+			<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+			</li>
+
+			<li class="offers-item">
+			<h3>Сувениры</h3>
+			<p>не только китайского, но и местного производства!</p>
+			</li>
+		</ul>
+		</section>
+	
+
+		<section class="features">
+
+			<h2 class="visually-hidden">Преимущества</h2>
+			<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+
+			<ul>
+			<li class="feature-item">
+			<h3>Настоящий городок</h3>
+			<p>-№1-</p>
+			<p>
+			Седона - неаттракцион для туристов, там течет своя жизнь
+			</p>
+			</li>
+		
+
+		<li class="feature-item">
+		<h3>Там есть мост дьявола</h3>
+		<p>-№2-</p>
+		<p>Да, по нему можно пройти! если конечно вы осмелитесь</p>	
+		</li>
+
+		<li class="feature-item">
+		<h3>Небольшая площадь</h3>
+		<p>-№3-</p>
+		<p>Все достопримечательности находятся очень близко</p>
+		</li>
+
+		<li class="feature-item">
+		<h3>Красивая дорога</h3>
+		<p>-№4-</p>
+		<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>	
+		</li>
+
+		<li class="feature-item">
+		<h3>Мало туристов</h3>
+		<p>-№5-</p>
+		<p>Большинство едет в Гранд Каньон и толпится там</p>
+		</li>	
+		</ul>
+
+	</section>
+
+		<section class="selection_data">
+			<h2>Заинтересовались?</h2>
+			<p class="selection-info">
+			Укажите предполагаемые даты поездки,<br>
+			И мы покажем вам лучшие предложения гостиниц в Седоне
+		</p>
+		<!--Здесь будет форма-->
+		</section>
+	</main>
+	<footer class="main-footer">
+		<span>#visitsedona</span>
+		
+		<div class="social">
+			<ul>
+			<li><a class="social-button" href="#">Твиттер</a></li>
+			<li><a class="social-button" href="#">Фейсбук</a></li>
+			<li><a class="social-button" href="#">Ютуб</a></li>
+			</ul>
+		</div>
+
+		<a class="main-footer-logo">websyte by
+		<img src="img/logo_html.svg" alt="Логотип HTMLAcademy">
+		</a>
+
+	</footer>
+	<section class="modal modal-map">
+		<h2 class="visually-hidden">Как до нас добраться</h2>
+		<span class="modal-close">x</span>
+	</section>
+</body>
 </html>
