поправила классы и убрала таблицы

--- a/catalog.html
+++ b/catalog.html
@@ -30,9 +30,9 @@
 		<section class="filters">
 		<h2 class="visually-hidden">Фильтр гостиниц</h2>
 			<!--Здесь будет форма-->
-			<section class="sort">
+			<div class="sort">
 			<!--Здесь будет форма-->
-		</section>
+		</div>
 		</section>
 
 		<section class="catalog">
@@ -41,55 +41,44 @@
 			<ul class="catalog-list">
 
 				<li class="catalog-item">
-					<h3>
+					<h3 class="hotel-name">
 						<a href="catalog-item.html">Amara resort & spa</a>
 					</h3>
 				<a href="catalog-item.html">
 					<img src="img/hotel.svg" alt="Amara resort & spa">
 				</a>
-				<table>
-					<tr>
-						<td>Гостиница</td>
-						<td>от 4000 р.</td>
-					</tr>
-				</table>
+				<p class="place">Гостиница</p>
+				<p class="price">от 4000 р.</p>
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 8,5</p>
 			</li>
 
 			<li class="catalog-item">
-				<h3>
+				<h3 class="hotel-name">
 					<a href="catalog-item.html">Desert Quail Inn</a>
 				</h3>
 				<a href="catalog-item.html">
 				<img src="img/motel.svg" alt="Desert Quail Inn">
 			</a>
+				<p class="place">Мотель</p>
+				<p class="price">от 3000 р.</p>
 					
-				<table>
-					<tr>
-						<td>Мотель</td>
-						<td>от 3000 р.</td>
-					</tr>
-				</table>
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 8,9</p>
 			</li>
 
 			<li class="catalog-item">
-				<h3>
+				<h3 class="hotel-name">
 					<a href="catalog-item.html">Villas at Poco Diablo</a>
 				</h3>
 				<a href="catalog-item.html">
 				<img src="img/apartment.svg" alt="Villas at Poco Diablo">
 				</a>
-				<table>
-					<tr>
-						<td>Апартаменты</td>
-						<td>от 2000 р.</td>
-					</tr>
-				</table>
+				<p class="place">Апартаменты</p>
+				<p class="price">от 2000 р.</p>
+					
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 9,2</p>
