--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 		<div class="intro">
 			<h1 class="page title">Sedona</h1>
 
-			<p>welcome<br>
+			<p class="greetings">
+				<span>welcome</span><br>
 			- to the gorgeous-</p>
 
 			
 			<q>Because the Grand Canyon sucks</q>
 
-			<p>
+			<p class="promo">
 			Седона-
 			небольшой городок в Аризоне,<br>
 			Заслуживающий большего!
@@ -51,18 +52,18 @@
 
 			<ul class="offers-list">
 
-				<li class="offers-item">
-			<h3>Жилье</h3>
+				<li class="offers-item offer-house">
+			<h3 class="offer-title">Жилье</h3>
 			<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
 			</li>
 
-			<li class="offers-item">
-			<h3>Еда</h3>
+			<li class="offers-item offer-food">
+			<h3 class="offer-title">Еда</h3>
 			<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 			</li>
 
-			<li class="offers-item">
-			<h3>Сувениры</h3>
+			<li class="offers-item offer-souvenir">
+			<h3 class="offer-title">Сувениры</h3>
 			<p>не только китайского, но и местного производства!</p>
 			</li>
 		</ul>
@@ -74,37 +75,37 @@
 			<h2 class="visually-hidden">Преимущества</h2>
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 
-			<ul>
+			<ul class="features-list">
 			<li class="feature-item">
-			<h3>Настоящий городок</h3>
-			<p>-№1-</p>
+			<h3 class="feature-title">Настоящий городок</h3>
+			<span>-№1-</span>
 			<p>
 			Седона - неаттракцион для туристов, там течет своя жизнь
 			</p>
 			</li>
 		
 
-		<li class="feature-item">
-		<h3>Там есть мост дьявола</h3>
-		<p>-№2-</p>
+		<li class="feature-item feature-bridge">
+		<h3 class="feature-title">Там есть мост дьявола</h3>
+		<span>-№2-</span>
 		<p>Да, по нему можно пройти! если конечно вы осмелитесь</p>	
 		</li>
 
-		<li class="feature-item">
-		<h3>Небольшая площадь</h3>
-		<p>-№3-</p>
+		<li class="feature-item feature-square">
+		<h3 class="feature-title">Небольшая площадь</h3>
+		<span>-№3-</span>
 		<p>Все достопримечательности находятся очень близко</p>
 		</li>
 
-		<li class="feature-item">
-		<h3>Красивая дорога</h3>
-		<p>-№4-</p>
+		<li class="feature-item feature-road">
+		<h3 class="feature-title">Красивая дорога</h3>
+		<span>-№4-</span>
 		<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>	
 		</li>
 
-		<li class="feature-item">
-		<h3>Мало туристов</h3>
-		<p>-№5-</p>
+		<li class="feature-item feature-tourist">
+		<h3 class="feature-title">Мало туристов</h3>
+		<span>-№5-</span>
 		<p>Большинство едет в Гранд Каньон и толпится там</p>
 		</li>	
 		</ul>
@@ -112,14 +113,15 @@
 	</section>
 
 		<section class="selection_data">
-			<h2>Заинтересовались?</h2>
+			<h2 class="selection-title">Заинтересовались?</h2>
 			<p class="selection-info">
 			Укажите предполагаемые даты поездки,<br>
 			И мы покажем вам лучшие предложения гостиниц в Седоне
 		</p>
 		</section>
+
 		<section class="modal modal-data-current">
-      <h2>Поиск гостиницы в Седоне</h2>
+      <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
       <!-- Здесь будет форма -->
     </section>
 
@@ -141,9 +143,11 @@
 			</ul>
 		</div>
 
+	<div class="copyright">
 		<span>websyte by</span>
 		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy">
 		</a>
+	</div>
 
 	</footer>
 </body>
