--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
 				<li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
 			</ul>
 		<a href="index.html" class="main-header-logo">
-		<img src="img/logo.svg"  alt="Логотип Седоны">
+		<img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
 		</a>
 
 		</nav>
@@ -45,7 +45,7 @@
 						<a href="catalog-item.html">Amara resort & spa</a>
 					</h3>
 				<a href="catalog-item.html">
-					<img src="img/hotel.svg" alt="Amara resort & spa">
+					<img src="img/amara.jpg" alt="Amara resort & spa" width="135" height="90">
 				</a>
 				<p class="place">Гостиница</p>
 				<p class="price">от 4000 р.</p>
@@ -59,7 +59,7 @@
 					<a href="catalog-item.html">Desert Quail Inn</a>
 				</h3>
 				<a href="catalog-item.html">
-				<img src="img/motel.svg" alt="Desert Quail Inn">
+				<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
 			</a>
 				<p class="place">Мотель</p>
 				<p class="price">от 3000 р.</p>
@@ -74,7 +74,7 @@
 					<a href="catalog-item.html">Villas at Poco Diablo</a>
 				</h3>
 				<a href="catalog-item.html">
-				<img src="img/apartment.svg" alt="Villas at Poco Diablo">
+				<img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
 				</a>
 				<p class="place">Апартаменты</p>
 				<p class="price">от 2000 р.</p>
@@ -102,7 +102,7 @@
 			</ul>
 		</div>
 		<span>websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy">
+		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
 		</a>
 
 	</footer>
