--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</ul>
 
 		<a class="main-header-logo">
-		<img src="img/logo.svg" alt="Логотип Седоны">
+		<img src="img/logo.png" alt="Логотип Седоны" width="138" height="70">
 		</a>
 
 		</nav>
@@ -29,22 +29,9 @@
 
 	<main class="container">
 
-		<div class="intro">
-			<h1 class="page title">Sedona</h1>
+			<h1 class="visually-hidden">Седона</h1>
 
-			<p class="greetings">
-				<span>welcome</span><br>
-			- to the gorgeous-</p>
-
-			
-			<q>Because the Grand Canyon sucks</q>
-
-			<p class="promo">
-			Седона-
-			небольшой городок в Аризоне,<br>
-			Заслуживающий большего!
-			</p>
-		</div>
+			<img src="img/background_index.jpg" alt="Превью" width="1200" height="800">
 
 		<section class="offers">
 
@@ -82,6 +69,7 @@
 			<p>
 			Седона - неаттракцион для туристов, там течет своя жизнь
 			</p>
+			<img src="img/city_1200.jpg" alt="городок"  width="800" height="401">
 			</li>
 		
 
@@ -89,6 +77,7 @@
 		<h3 class="feature-title">Там есть мост дьявола</h3>
 		<span>-№2-</span>
 		<p>Да, по нему можно пройти! если конечно вы осмелитесь</p>	
+		<img src="img/bridge_1200.jpg" alt="Мост" width="800" height="400">
 		</li>
 
 		<li class="feature-item feature-square">
@@ -112,13 +101,13 @@
 
 	</section>
 
-		<section class="selection_data">
-			<h2 class="selection-title">Заинтересовались?</h2>
-			<p class="selection-info">
+		<div class="appointment">
+			<h2 class="appointment-title">Заинтересовались?</h2>
+			<p class="appointment-info">
 			Укажите предполагаемые даты поездки,<br>
 			И мы покажем вам лучшие предложения гостиниц в Седоне
 		</p>
-		</section>
+		</div>
 
 		<section class="modal modal-data-current">
       <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
@@ -127,7 +116,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/map.svg" alt="Карта">
+      <img src="img/map.svg" alt="Карта" width="1200" height="414">
     </section>
 
 	</main>
@@ -145,7 +134,7 @@
 
 	<div class="copyright">
 		<span>websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy">
+		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
 		</a>
 	</div>
 
