загрузила готовые svg и переделала главное фото

--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
 			</ul>
 		</div>
 		<span>websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
+		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
 		</a>
 
 	</footer>
