--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/map.svg" alt="Карта" width="1200" height="414">
+      <img src="img/map.png" alt="Карта" width="1200">
     </section>
 
 	</main>
@@ -134,7 +134,7 @@
 
 	<div class="copyright">
 		<span>websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo_html.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
+		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
 		</a>
 	</div>
 
