--- a/hotels.html
+++ b/hotels.html
@@ -4,22 +4,19 @@
 	<meta charset="UTF-8">
 	<title>Sedona hotels</title>
 </head>
-
 <body>
-
 	<header class="main-header">
-		
+		<a href="index.html" class="main-header-logo">
+		<img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
+		</a>
 		<nav class="main-navigation">
-
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="foto-video.html">Фото и видео</a></li>
 				<li><a href="maps.html">Карта штата</a></li>
-				<li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
+				<li class="site-navigation-current">Гостиницы</li>
 			</ul>
-		<a href="index.html" class="main-header-logo">
-		<img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
-		</a>
+		
 
 		</nav>
 	</header>
