--- a/hotels.html
+++ b/hotels.html
@@ -16,8 +16,6 @@
 				<li><a href="maps.html">Карта штата</a></li>
 				<li class="site-navigation-current">Гостиницы</li>
 			</ul>
-		
-
 		</nav>
 	</header>
 
@@ -26,70 +24,116 @@
 
 		<section class="filters">
 		<h2 class="visually-hidden">Фильтр гостиниц</h2>
-			<!--Здесь будет форма-->
-			<div class="sort">
-			<!--Здесь будет форма-->
-		</div>
+			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
+			<fieldset>
+				<legend>Инфраструктура:</legend>
+				<ul>
+              <li class="filter-facilities">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+                <label for="filter-pool">Бассейн</label>
+              </li>
+              <li class="filter-facilities">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
+                <label for="filter-parking">Парковка</label>
+              </li>
+              <li class="filter-facilities">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wi-fi" id="filter-wi-fi">
+                <label for="filter-wi-fi">Wi-Fi</label>
+              </li>
+            </ul>
+			</fieldset>
+			
+			<fieldset>
+				<legend>Тип жилья:</legend>
+				<ul>
+              <li class="filter-hotel">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+                <label for="filter-hotel">Гостиница</label>
+              </li>
+              <li class="filter-hotel">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+                <label for="filter-motel">Мотель</label>
+              </li>
+              <li class="filter-hotel">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+                <label for="filter-apartments">Апартаменты</label>
+              </li>
+            </ul>
+			</fieldset>
+			<div class="value">
+				<label for="select-value">Стоимость в сутки (р):</label>
+				<table class="filter-range">
+					<tr>
+						<td>от 0</td>
+						<td>до 3000</td>
+					</tr>
+				</table>
+				<input class="visually-hidden" id="select-value" type="range" min="0" max="3000">
+			</div>
+			<button type="submit" class="filter-button button">Показать</button>
+			</form>
 		</section>
+		
+		<div class="sort">
+			<span>Найдено: 3</span>
+			<p>Сортировка:</p>
+			<ul class="sort-list">
+				<li class="sort-item-current">По цене</li>
+				<li class="sort-item"><a href="#">По типу</a></li>
+				<li class="sort-item"><a href="#">По рейтингу</a></li>
+			</ul>
+		</div>
 
 		<section class="catalog">
 			<h2 class="visually-hidden">Список гостиниц</h2>
-
 			<ul class="catalog-list">
 
 				<li class="catalog-item">
-					<h3 class="hotel-name">
-						<a href="catalog-item.html">Amara resort & spa</a>
-					</h3>
 				<a href="catalog-item.html">
+					<h3 class="hotel-name">Amara resort & spa</h3>
+					<p class="catalog-item-image">
 					<img src="img/amara.jpg" alt="Amara resort & spa" width="135" height="90">
+					<p>
 				</a>
 				<p class="place">Гостиница</p>
 				<p class="price">от 4000 р.</p>
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 8,5</p>
-			</li>
+				</li>
 
-			<li class="catalog-item">
-				<h3 class="hotel-name">
-					<a href="catalog-item.html">Desert Quail Inn</a>
-				</h3>
+				<li class="catalog-item">
 				<a href="catalog-item.html">
-				<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
-			</a>
+					<h3 class="hotel-name">Desert Quail Inn</h3>
+					<p class="catalog-item-image">
+					<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">	
+					</p>
+				</a>
 				<p class="place">Мотель</p>
 				<p class="price">от 3000 р.</p>
-					
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 8,9</p>
-			</li>
+				</li>
 
-			<li class="catalog-item">
-				<h3 class="hotel-name">
-					<a href="catalog-item.html">Villas at Poco Diablo</a>
-				</h3>
+				<li class="catalog-item">
 				<a href="catalog-item.html">
-				<img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+					<h3 class="hotel-name">Villas at Poco Diablo</h3>
+					<p class="catalog-item-image">
+					<img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+					</p>
 				</a>
 				<p class="place">Апартаменты</p>
 				<p class="price">от 2000 р.</p>
-					
 					<a href="#" class="btn btn-info">Подробнее</a>
             		<a href="#" class="btn btn-boking">Забронировать</a>
 				<p class="rating">Рейтинг: 9,2</p>
-			</li>
-			</ul>
+				</li>
+				</ul>
 		</section>
-
-
-
 	</main>
-	
 	<footer class="main-footer">
-
-		<span>#visitsedona</span>
+		<b>#visitsedona</b>
 		
 		<div class="social">
 			<ul>
@@ -98,10 +142,12 @@
 			<li><a class="social-button" href="#">Ютуб</a></li>
 			</ul>
 		</div>
+
+	<div class="copyright">
 		<span>websyte by</span>
 		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
 		</a>
-
+	</div>
 	</footer>
 </body>
 </html>
