--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sedona</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet"  href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header class="main-header">
@@ -33,19 +36,19 @@
 		<h2 class="visually-hidden">Предложения</h2>
 
 		<ul class="offers-list">
-			<li class="offers-item">
+			<li class="offers-item offer-house">
 			<h3 class="offer-title">Жилье</h3>
-			<p class="offer-reclame">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+			<p class="offer-reclame">Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
 			</li>
 
-			<li class="offers-item">
+			<li class="offers-item offer-food">
 			<h3 class="offer-title">Еда</h3>
-			<p class="offer-reclame">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+			<p class="offer-reclame">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
 			</li>
 
-			<li class="offers-item">
+			<li class="offers-item offer-souvenirs">
 			<h3 class="offer-title">Сувениры</h3>
-			<p class="offer-reclame">Не только китайского, но и местного производства!</p>
+			<p class="offer-reclame">Не только китайского, но и местного<br> производства!</p>
 			</li>
 		</ul>
 		</section>
@@ -54,39 +57,39 @@
 		<section class="features">
 		<h2 class="visually-hidden">Преимущества</h2>
 
-		<ul class="features-list">
-			<li class="features-item">
+		<ol class="features-list">
+			<li class="features-item feature-city">
 			<h3 class="feature-title">Настоящий<br> городок</h3>
-			<span class="number">-№1-</span>
+			<span class="number">- №1 -</span>
 			<p class="definition">Седона - неаттракцион для туристов,<br> там течет своя жизнь</p>
 			<img src="img/city_1200.jpg" alt="городок"  width="800" height="401">
 			</li>
 		
-			<li class="features-item">
+			<li class="features-item feature-bridge">
 			<h3 class="feature-title">Там есть<br> мост дьявола</h3>
-			<span class="number">-№2-</span>
+			<span class="number">- №2 -</span>
 			<p class="definition">Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>	
 			<img src="img/bridge_1200.jpg" alt="Мост" width="800" height="400">
 			</li>
 
-			<li class="features-item">
+			<li class="features-item feature-square">
 			<h3 class="feature-title">Небольшая<br> площадь</h3>
-			<span class="number">-№3-</span>
+			<span class="number">- №3 -</span>
 			<p class="definition">Все достопримечательности<br> находятся очень близко</p>
 			</li>
 
-			<li class="features-item">
+			<li class="features-item feature-road">
 			<h3 class="feature-title">Красивая<br> дорога</h3>
-			<span class="number">-№4-</span>
+			<span class="number">- №4 -</span>
 			<p class="definition">Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>	
 			</li>
 
-			<li class="features-item">
+			<li class="features-item feature-tourist">
 			<h3 class="feature-title">Мало<br> туристов</h3>
-			<span class="number">-№5-</span>
+			<span class="number">- №5 -</span>
 			<p class="definition">Большинство едет в Гранд Каньон<br> и толпится там</p>
 			</li>	
-		</ul>
+		</ol>
 		</section>
 
 		<section class="modal modal-data-current">
@@ -102,11 +105,12 @@
       			</label>
       		</div>
       		<div class="modal-form-group">
-      			<label for="departure-date">Дата выезда:</label>
-      			<input class="select-departure" type="text" name="departure-date" id="departure-date-field" placeholder="4 июля 2017">
+      			<label>Дата выезда:
+      			<input class="select-departure" type="text" name="departure-date" placeholder="4 июля 2017">
+      			</label>
       		</div>
       		<div class="modal-form-group">
-      			<label >Взрослые:
+      			<label>Взрослые:
       			<input class="select-adults" type="text" name="adults" placeholder="2">
       			</label>
       		</div>
@@ -127,19 +131,19 @@
 	</main>
 
 	<footer class="main-footer">
-		<b>#visitsedona</b>
+		<div class="inviting"><span>#visitsedona</span></div>
 		
 		<div class="social">
 			<ul class="social-list">
-			<li><a class="social-btn" href="#">Твиттер</a></li>
-			<li><a class="social-btn" href="#">Фейсбук</a></li>
-			<li><a class="social-btn" href="#">Ютуб</a></li>
+			<li><a class="social-btn" href="#twitter">Твиттер</a></li>
+			<li><a class="social-btn" href="#fb">Фейсбук</a></li>
+			<li><a class="social-btn" href="#youtube">Ютуб</a></li>
 			</ul>
 		</div>
 
 	<div class="footer-copyright">
 		<span class="copyright">websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41">
+		<a href="https://htmlacademy.ru/intensive/htmlcss"  class="main-footer-logo"><img src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41" title="Ссылка на сайт HTMLAcademy">
 		</a>
 	</div>
 	</footer>
