--- a/hotels.html
+++ b/hotels.html
@@ -1,164 +1,208 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Sedona hotels</title>
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet"  href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<header class="main-header">
-		<a href="index.html" class="main-header-logo">
-		<img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
-		</a>
-		<nav class="main-navigation">
-			<ul class="site-navigation">
-				<li><a href="info.html">Информация</a></li>
-				<li><a href="foto-video.html">Фото и видео</a></li>
-				<li><a href="maps.html">Карта штата</a></li>
-				<li class="site-navigation-current">Гостиницы</li>
-			</ul>
-		</nav>
-	</header>
+  <head>
+    <meta charset="UTF-8">
+    <title>Sedona hotels</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" >
+    <link rel="stylesheet"  href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a href="info.html">Информация</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="foto-video.html">Фото и видео</a>
+          </li>
+          <li>
+            <a class="main-header-logo" href="index.html">
+            <img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
+            </a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="maps.html">Карта штата</a>
+          </li>
+          <li class="site-navigation-item site-navigation-current">Гостиницы</li>
+        </ul>
+      </nav>
+    </header>
 
-	<main class="container">
-		<h1 class="visually-hidden">Каталог гостиниц</h1>
+    <main class="container">
+      <h1 class="visually-hidden">Каталог гостиниц</h1>
 
-		<section class="filters">
-		<h2 class="visually-hidden">Фильтр гостиниц</h2>
-			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
-			<div class="facilities">
-				<h3 class="filter-title">Инфраструктура:</h3>
-				<ul class="filter-list">
-              <li class="filter-item">
-                <label> 
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" checked>Бассейн
-            	</label>
-              </li>
+      <section class="filters">
+        <h2 class="visually-hidden">Фильтр гостиниц</h2>
+
+        <form class="filter" action="https://echo.htmlacademy.ru" method="get">
+
+          <div class="facilities">
+            <h3 class="filter-title">Инфраструктура:</h3>
+            <ul class="filter-list">
               <li class="filter-item">
                 <label>
-                	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking">Парковка
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" checked>Бассейн
                 </label>
               </li>
               <li class="filter-item">
                 <label>
-                	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wi-fi">Wi-Fi
-            	</label>
-              </li>
-            </ul>
-			</div>
-			
-			<div class="hotels">
-				<h3 class="filter-title">Тип жилья:</h3>
-				<ul class="filter-list">
-              <li class="filter-item">
-                <label>
-                	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" checked>Гостиница
-            	</label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking">Парковка
+                </label>
               </li>
               <li class="filter-item">
                 <label>
-                	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" checked>Мотель
-            	</label>
-              </li>
-              <li class="filter-item">
-                <label>
-                	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" checked>Апартаменты
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wi-fi">Wi-Fi
                 </label>
               </li>
             </ul>
-			</div>
+          </div>
 
-			<div class="value">
-				<h3 class="filter-title">Стоимость в сутки (р):</h3>
-				<label for="select-value"></label>
-				<table class="filter-range">
-					<tr>
-						<td>от 0</td>
-						<td>до 3000</td>
-					</tr>
-				</table>
-				<input class="visually-hidden" name="select-value" id="select-value" type="range" min="0" max="3000">
-			</div>
-			<button type="submit" class="filter-button">Показать</button>
-			</form>
-		</section>
-		
-		<div class="sort">
-			<p class="total">Найдено: 3</p>
-			<p >Сортировка:</p>
-			<ul class="sort-list">
-				<li class="sort-item-current">По цене</li>
-				<li class="sort-item"><a href="#type">По типу</a></li>
-				<li class="sort-item"><a href="#rating">По рейтингу</a></li>
-			</ul>
-		</div>
+          <div class="hotels">
+            <h3 class="filter-title">Тип жилья:</h3>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" checked>Гостиница
+                </label>
+              </li>
+              <li class="filter-item">
+                <label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" checked>Мотель
+                </label>
+              </li>
+              <li class="filter-item">
+                <label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" checked>Апартаменты
+                </label>
+              </li>
+            </ul>
+          </div>
 
-		<section class="catalog">
-			<h2 class="visually-hidden">Список гостиниц</h2>
-			<ul class="catalog-list">
+          <div class="value">
+            <h3 class="filter-title">Стоимость в сутки (р):</h3>
+            <label for="select-value">от 0 до 3000</label>
+            <input class="visually-hidden" id="select-value" name="select-value" type="range" min="0" max="3000">
+          <button class="filter-button" type="submit" >Показать</button>
+        </div>
+        </form>
+      </section>
 
-				<li class="catalog-item">
-				<a href="catalog-item.html">
-					<p class="catalog-item-image">
-					<img src="img/amara.jpg" alt="Amara resort & spa" width="135" height="90">
-					</p>
-					<h3 class="hotel-name">Amara resort & spa</h3>
-				</a>
-				<span class="place">Гостиница</span>
-				<span class="price">от 4000 р.</span>
-					<a href="#info" class="btn btn-info">Подробнее</a>
-            		<a href="#book" class="btn btn-booking">Забронировать</a>
-				<span class="rating">Рейтинг: 8,5</span>
-				</li>
+      <div class="sort">
+        <p class="total">Найдено: 3</p>
+        <p class="title">Сортировка:</p>
+        <ul class="sort-list">
+          <li class="sort-item-current">По цене</li>
+          <li class="sort-item">
+            <a href="#type">По типу</a>
+          </li>
+          <li class="sort-item">
+            <a href="#rating">По рейтингу</a>
+          </li>
+        </ul>
+      </div>
 
-				<li class="catalog-item">
-				<a href="catalog-item.html">	
-					<p class="catalog-item-image">
-					<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">	
-					</p>
-					<h3 class="hotel-name">Desert Quail Inn</h3>
-				</a>
-				<span class="place">Мотель</span>
-				<span class="price">от 3000 р.</span>
-					<a href="#info" class="btn btn-info">Подробнее</a>
-            		<a href="#book" class="btn btn-booking">Забронировать</a>
-				<span class="rating">Рейтинг: 8,9</span>
-				</li>
+      <section class="catalog">
+        <h2 class="visually-hidden">Список гостиниц</h2>
+          <ul class="catalog-list">
+            <li class="catalog-item">
+              <a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/amara.jpg" alt="Amara resort & spa" width="135" height="90">
+              </a>
+              <div class="information">
+                <a href="catalog-item.html">
+                  <h3 class="hotel-name">Amara resort & spa</h3>
+                </a>
+                <p>
+                  <span class="place">Гостиница</span>
+                  <span class="price">от 4000 р.</span>
+                </p>
+                <p>
+                  <a href="#info">
+                    <span class="btn btn-info">Подробнее</span>
+                  </a>
+                  <a href="#book">
+                    <span class="btn btn-booking">Забронировать</span>
+                  </a>
+                </p>
+              </div>
+              <span class="rating">Рейтинг: 8,5</span>
+            </li>
 
-				<li class="catalog-item">
-				<a href="catalog-item.html">
-					<p class="catalog-item-image">
-					<img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
-					</p>
-					<h3 class="hotel-name">Villas at Poco Diablo</h3>
-				</a>
-				<span class="place">Апартаменты</span>
-				<span class="price">от 2000 р.</span>
-					<a href="#info" class="btn btn-info">Подробнее</a>
-            		<a href="#book" class="btn btn-booking">Забронировать</a>
-				<span class="rating">Рейтинг: 9,2</span>
-				</li>
-				</ul>
-		</section>
-	</main>
-	<footer class="main-footer">
-		<div class="inviting"><span>#visitsedona</span></div>
-		
-		<div class="social">
-			<ul class="social-list">
-			<li><a class="social-btn" href="#twitter">Твиттер</a></li>
-			<li><a class="social-btn" href="#fb">Фейсбук</a></li>
-			<li><a class="social-btn" href="#youtube">Ютуб</a></li>
-			</ul>
-		</div>
+            <li class="catalog-item">
+              <a class="catalog-item-image" href="catalog-item.html">
+                <img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+              </a>
+              <div class="information">
+                <a href="catalog-item.html">
+                  <h3 class="hotel-name">Desert Quail Inn</h3>
+                </a>
+                <p>
+                  <span class="place">Мотель</span>
+                  <span class="price">от 3000 р.</span>
+                </p>
+                <p>
+                  <a href="#info">
+                    <span class="btn btn-info">Подробнее</span>
+                  </a>
+                  <a href="#book">
+                    <span class="btn btn-booking">Забронировать</span>
+                  </a>
+                </p>
+              </div>
+              <span class="rating">Рейтинг: 8,9</span>
+            </li>
 
-	<div class="footer-copyright">
-		<span class="copyright">websyte by</span>
-		<a href="https://htmlacademy.ru/intensive/htmlcss" class="main-footer-logo" ><img  src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41" title="Ссылка на сайт HTMLAcademy">
-		</a>
-	</div>
-	</footer>
-</body>
-</html>
+            <li class="catalog-item">
+              <a class="catalog-item-image" href="catalog-item.html">
+                <img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+              </a>
+              <div class="information">
+                <a href="catalog-item.html">
+                  <h3 class="hotel-name">Villas at Poco Diablo</h3>
+                </a>
+                <p>
+                  <span class="place">Апартаменты</span>
+                  <span class="price">от 2000 р.</span>
+                </p>
+                <p>
+                  <a href="#info">
+                    <span class="btn btn-info">Подробнее</span>
+                  </a>
+                  <a href="#book">
+                    <span class="btn btn-booking">Забронировать</span>
+                  </a>
+                </p>
+              </div>
+              <span class="rating">Рейтинг: 9,2</span>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="main-footer">
+        <span class="inviting">#visitsedona</span>
+
+        <div class="social">
+          <ul class="social-list">
+            <li>
+              <a class="social-btn" href="#twitter">Твиттер</a>
+            </li>
+            <li>
+              <a class="social-btn" href="#fb">Фейсбук</a>
+            </li>
+            <li>
+              <a class="social-btn" href="#youtube">Ютуб</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-copyright">
+          <span class="copyright">websyte by</span>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="main-footer-logo" >
+              <img  src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41" title="Ссылка на сайт HTMLAcademy">
+            </a>
+        </div>
+      </footer>
+    </body>
+  </html>
