модальное окно оформила

--- a/hotels.html
+++ b/hotels.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main>
       <h1 class="visually-hidden">Каталог гостиниц</h1>
 
       <section class="filters">
