пытаюсь подключить скрипты

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			<section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <p>
-				  <img src="img/map.png"  width="1200" height="593" alt="Карта">
+				  <img src="img/map.png"  width="1200" height="594" alt="Карта">
         </p>
 			</section>
 		</main>
@@ -197,5 +197,6 @@
 	   </footer>
    </div>
    <div class="modal-overlay"></div>
+   <script src="file.js"></script>
   </body>
 </html>
